--- a/chat_room/makefile
+++ b/chat_room/makefile
@@ -1,17 +1,17 @@
 CC = gcc
 CFLAGS = -g -Wall -Werror
 OBJS = list.o chat_room.o
-PROGRAM = chat_room
+PROGRAM = s-talk
 
 all: $(PROGRAM)
 
 $(PROGRAM): $(OBJS)
-	$(CC) $(CFLAGS) -o $(PROGRAM) $(OBJS)
+	$(CC) $(CFLAGS) -o $(PROGRAM) $(OBJS) -lpthread
 
 list.o: list.c list.h
 	$(CC) $(CFLAGS) -c list.c -o list.o
 
-test_cases.o: chat_room.c chat_room.h
+chat_room.o: chat_room.c
 	$(CC) $(CFLAGS) -c chat_room.c -o chat_room.o
 
 clean:
