Cleaned Unused files, Added readme, BugFix: Termination when input buffer was not empty

--- a/chat-server-c/Makefile
+++ b/chat-server-c/Makefile
@@ -8,8 +8,8 @@ all: $(PROGRAM)
 $(PROGRAM): $(OBJS)
 	$(CC) $(CFLAGS) -o $(PROGRAM) $(OBJS) -lpthread
 
-list.o: list.c list2.h
-	$(CC) $(CFLAGS) -c list2.c -o list.o
+list.o: list.c list.h
+	$(CC) $(CFLAGS) -c list.c -o list.o
 
 chat_room.o: chat_room.c
 	$(CC) $(CFLAGS) -c chat_room.c -o chat_room.o
